6997459: JSR 292 after 6994093 getting: on return to interpreted call, restored SP is corrupted

Reviewed-by: kvn, jrose, never